add target  blank

--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
 	<body>
 		<div id="hero">
 			<h1>AltNoGame</h1>
-			<h2>Game based on <a href="https://www.reddit.com/r/teenagers/comments/a8vn3u/everyone_said_buying_condoms_was_no_big_deal_and/">the legendary thread</a> by <a href="https://www.reddit.com/user/alt-no-more">u/alt-no-more</a>.</h2>	
+			<h2>Game based on <a href="https://www.reddit.com/r/teenagers/comments/a8vn3u/everyone_said_buying_condoms_was_no_big_deal_and/" target="_blank">the legendary thread</a> by <a href="https://www.reddit.com/user/alt-no-more" target="_blank">u/alt-no-more</a>.</h2>	
 		</div>
 		
 		<div class="game">
