everything except points

--- a/game.html
+++ b/game.html
@@ -9,14 +9,20 @@
 	<body>
 		<div id="hero">
 			<h1>AltNoGame</h1>
-			<h2>Game based on <a href="https://www.reddit.com/r/teenagers/comments/a8vn3u/everyone_said_buying_condoms_was_no_big_deal_and/" target="_blank">the legendary thread</a> by <a href="https://www.reddit.com/user/alt-no-more" target="_blank">u/alt-no-more</a>.</h2>
+			<h2>Game based on <a href="https://www.reddit.com/r/teenagers/comments/a8vn3u/everyone_said_buying_condoms_was_no_big_deal_and/" target="_blank">the legendary thread</a> by <a href="https://www.reddit.com/user/alt-no-more" target="_blank">u/alt-no-more</a>.</h2>			
 			<h2>Developed by <a href="https://www.reddit.com/user/RickDeveloper" target="_blank">u/RickDeveloper</a></h2>
+			<img src="images/ualtnomore.png" alt="u/alt-no-more" id="altNoImage">
 		</div>
 		
 		<div class="game">
-			<canvas id="canvas"  width="480" height="320">
-				
-			</canvas>
+			<canvas id="canvas"  width="600" height="400"></canvas>
+		</div>
+
+		<div class="images">
+			<img src="images/cashier.png" alt="cashier" id="cashier">
+			<img src="images/condom.png" alt="condom" id="condom">
+			<img src="images/old_lady.png" alt="old_lady" id="old_Lady">
+			<img src="images/deo.png" alt="deodorant" id="deodorant">
 		</div>
 
 		<noscript>
