--- a/game.html
+++ b/game.html
@@ -4,6 +4,14 @@
 		<meta charset="UTF-8">
 
 		<link rel="stylesheet" href="Styles/game.css">
+
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script>
+		  (adsbygoogle = window.adsbygoogle || []).push({
+		    google_ad_client: "ca-pub-6177390435233102",
+		    enable_page_level_ads: true
+		  });
+		</script>
 	</head>
 
 	<body>
