--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<div id="hero">
 			<h1>AltNoGame</h1>
-			<h2>Game based on <a href="https://www.reddit.com/r/teenagers/comments/a8vn3u/everyone_said_buying_condoms_was_no_big_deal_and/" target="_blank">the legendary thread</a> by <a href="https://www.reddit.com/user/alt-no-more" target="_blank">u/alt-no-more</a> <img src="images/ualtnomore.png" alt="u/alt-no-more" id="altNoImage"></h2>			
+			<h2>Game based on <a href="https://www.reddit.com/r/teenagers/comments/a8vn3u/everyone_said_buying_condoms_was_no_big_deal_and/" target="_blank">the legendary thread</a> by <a href="https://www.reddit.com/user/alt-no-more" target="_blank">u/alt-no-more</a></h2>			
 			<h2>Developed by <a href="https://www.reddit.com/user/RickDeveloper" target="_blank">u/RickDeveloper</a></h2>
 		</div>
 		
@@ -26,6 +26,11 @@
 		</div>
 
 		<div class="scores">
+			<div class="score_item">
+				<img src="images/ualtnomore.png" alt="u/alt-no-more" id="altNoImage" >
+				<h3 class="score_label">You</h3>
+			</div>
+
 			<div class="score_item">
 				<img src="images/condom.png" alt="condom" id="condom" >
 				<h3 class="score_label good">+3</h3>
