--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8">
 
 		<link rel="stylesheet" href="Styles/game.css">
+		
+		<link rel="shortcut icon" href="images/favicon.ico" type='image/x-icon'>
 
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<script>
@@ -17,8 +19,9 @@
 	<body>
 		<div id="hero">
 			<h1>AltNoGame</h1>
-			<h2>Game based on <a href="https://www.reddit.com/r/teenagers/comments/a8vn3u/everyone_said_buying_condoms_was_no_big_deal_and/" target="_blank">the legendary thread</a> by <a href="https://www.reddit.com/user/alt-no-more" target="_blank">u/alt-no-more</a></h2>			
-			<h2>Developed by <a href="https://www.reddit.com/user/RickDeveloper" target="_blank">u/RickDeveloper</a></h2>
+			<h2>Game based on <a href="https://www.reddit.com/r/teenagers/comments/a8vn3u/everyone_said_buying_condoms_was_no_big_deal_and/" target="_blank">the legendary thread</a> by <a href="https://www.reddit.com/user/alt-no-more" target="_blank">u/alt-no-more</a></h2>		
+			<h2>Use the arrow keys on your <span style="font-weight: 800; color: red;">keyboard</span> to play!</h2>	
+			<h4>Made by <a href="https://www.reddit.com/user/RickDeveloper" target="_blank">u/RickDeveloper</a> Are you a nerd too? Then check out <a target="_blank" href="https://github.com/altnomore/altnomore.github.io">the GitHub repo</a>!</h4>
 		</div>
 		
 		<div class="game">
