--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-hi
+<html>
+	<head>
+		<title>AltNoGame</title>
+		<meta charset="UTF-8">
+
+		<link rel="stylesheet" href="Styles/game.css">
+		
+		<link rel="shortcut icon" href="images/favicon.ico" type='image/x-icon'>
+
+		
+	</head>
+ 
+	<body>
+		<div id="hero">
+			<h1>AltNoGame</h1>
+			<h2>Game based on <a href="https://www.reddit.com/r/teenagers/comments/a8vn3u/everyone_said_buying_condoms_was_no_big_deal_and/" target="_blank">the legendary thread</a> by <a href="https://www.reddit.com/user/alt-no-more" target="_blank">u/alt-no-more</a></h2>		
+			<h2>Use the arrow keys on your <span style="font-weight: 800; color: red;">keyboard</span> to play!</h2>	
+			<h4>Made by <a href="https://www.reddit.com/user/RickDeveloper" target="_blank">u/RickDeveloper</a> Are you a nerd too? Then check out <a target="_blank" href="https://github.com/altnomore/altnomore.github.io">the GitHub repo</a>!</h4>
+		</div>
+		
+		<div class="game">
+			<canvas id="canvas"  width="600" height="400"></canvas>
+		</div>
+
+		<div class="scores">
+			<div class="score_item">
+				<img src="images/ualtnomore.png" alt="u/alt-no-more" id="altNoImage" >
+				<h3 class="score_label">You</h3>
+			</div>
+
+			<div class="score_item">
+				<img src="images/condom.png" alt="condom" id="condom" >
+				<h3 class="score_label good">+3</h3>
+			</div>
+
+			<div class="score_item">
+				<img src="images/deo.png" alt="deodorant" id="deodorant" >
+				<h3 class="score_label good">+1</h3>			
+			</div>
+
+			<div class="score_item">
+				<img src="images/old_lady.png" alt="old_lady" id="old_Lady" >
+				<h3 class="score_label bad">-2</h3>
+			</div>
+
+			<div class="score_item">
+				<img src="images/cashier.png" alt="cashier" id="cashier" >
+				<h3 class="score_label bad">-1</h3>
+			</div>
+		</div>
+
+		<noscript>
+			<p>
+				This game needs JavaScript! It's currently disabled so please enable it in your browser's settings.
+			</p>
+		</noscript>
+		<script src="Scripts/game.js"></script>
+	</body>
+</html>
