--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 		
 		<link rel="shortcut icon" href="images/favicon.ico" type='image/x-icon'>
 
-		
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script>
+		  (adsbygoogle = window.adsbygoogle || []).push({
+		    google_ad_client: "ca-pub-9556435824306510",
+		    enable_page_level_ads: true
+		  });
+		</script>
 	</head>
  
 	<body>
