--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 	<body>
 		<div id="hero">
 			<h1>AltNoGame</h1>
-			<h2>Game based on <a href="https://www.reddit.com/r/teenagers/comments/a8vn3u/everyone_said_buying_condoms_was_no_big_deal_and/" target="_blank">the legendary thread</a> by <a href="https://www.reddit.com/user/alt-no-more" target="_blank">u/alt-no-more</a></h2>		
-			<h2>Use the arrow keys on your <span style="font-weight: 800; color: red;">keyboard</span> to play!</h2>	
-			<h4>Made by <a href="https://www.reddit.com/user/RickDeveloper" target="_blank">u/RickDeveloper</a> Are you a nerd too? Then check out <a target="_blank" href="https://github.com/altnomore/altnomore.github.io">the GitHub repo</a>!</h4>
+			<h3>Game based on <a href="https://www.reddit.com/r/teenagers/comments/a8vn3u/everyone_said_buying_condoms_was_no_big_deal_and/" target="_blank">the legendary thread</a> by <a href="https://www.reddit.com/user/alt-no-more" target="_blank">u/alt-no-more</a></h23>		
+			<h3>Use the arrow keys on your <span style="font-weight: 800; color: red;">keyboard</span> to play!</h3>	
+			<h2 id="donate"><a href="https://paypal.me/AltNoGame" target="_blank">If you like this project, please donate!</a></h2>
+			<h4>Made by <a href="https://www.reddit.com/user/RickDeveloper" target="_blank">u/RickDeveloper</a>. Are you a nerd too? Then check out <a target="_blank" href="https://github.com/altnogame/altnogame.github.io">the GitHub repo</a>!</h4>
 		</div>
 		
 		<div class="game">
@@ -54,7 +55,7 @@
 				<h3 class="score_label bad">-1</h3>
 			</div>
 		</div>
-
+		
 		<noscript>
 			<p>
 				This game needs JavaScript! It's currently disabled so please enable it in your browser's settings.
