--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		    enable_page_level_ads: true
 		  });
 		</script>
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
  
 	<body>
