--- a/index.html
+++ b/index.html
@@ -7,67 +7,68 @@
 		
 		<link rel="shortcut icon" href="images/favicon.ico" type='image/x-icon'>
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		<script>
-		  (adsbygoogle = window.adsbygoogle || []).push({
-		    google_ad_client: "ca-pub-9556435824306510",
-		    enable_page_level_ads: true
-		  });
-		</script>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
  
 	<body>
-		<div class="container">
-			<div id="hero">
-				<h1 class="display-4">AltNoGame</h1>
-				<p class="lead">Game based on <a href="https://www.reddit.com/r/teenagers/comments/a8vn3u/everyone_said_buying_condoms_was_no_big_deal_and/" target="_blank">the legendary thread</a> by <a href="https://www.reddit.com/user/alt-no-more" target="_blank">u/alt-no-more</a>. Use the arrow keys on your <span style="font-weight: 800; color: red;">keyboard</span> to play!</p>
-				<p class="lead">This game was made by <a href="https://www.reddit.com/user/RickDeveloper" target="_blank">u/RickDeveloper</a>. If you like it, please consider donating!</p>
-				<a class="btn btn-danger btn-lg donate-btn" href="https://paypal.me/AltNoGame" target="_blank" role="button">Donate on <img width="64" alt="PayPal" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/PayPal.svg/64px-PayPal.svg.png"></a>
+		<div class="containe-fluid">
+			<div class="row justify-content-center px-0 mx-0">
+				<div class=" col-12">
+					<div id="main">
+						<h1 >AltNoGame</h1>
+						<p class="lead">Game based on <a href="https://www.reddit.com/r/teenagers/comments/a8vn3u/everyone_said_buying_condoms_was_no_big_deal_and/" target="_blank">the legendary thread</a> by <a href="https://www.reddit.com/user/alt-no-more" target="_blank">u/alt-no-more</a>. Use the arrow keys on your <span style="font-weight: 800; color: red;">keyboard</span> to play!</p>
+						<p class="lead">This game was made by <a href="https://www.reddit.com/user/RickDeveloper" target="_blank">u/RickDeveloper</a>. If you like it, please consider donating!</p>
+						<a class="btn btn-danger btn-lg donate-btn" href="https://paypal.me/AltNoGame" target="_blank" role="button">Donate on <img width="64" alt="PayPal" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/PayPal.svg/64px-PayPal.svg.png"></a>
+
+						<div id="game"><canvas id="canvas"  width="600" height="400"></canvas></div>
+
+						<div class="scores row px-0 mx-0 justify-content-center">
+							<div class="score_item">
+								<img src="images/ualtnomore.png" alt="u/alt-no-more" id="altNoImage" >
+								<h3 class="score_label">You</h3>
+							</div>
+
+							<div class=" score_item">
+								<img src="images/condom.png" alt="condom" id="condom" >
+								<h3 class="score_label good">+3</h3>
+							</div>
+
+							<div class=" score_item">
+								<img src="images/deo.png" alt="deodorant" id="deodorant" >
+								<h3 class="score_label good">+1</h3>			
+							</div>
+
+							<div class=" score_item">
+								<img src="images/old_lady.png" alt="old_lady" id="old_Lady" >
+								<h3 class="score_label bad">-2</h3>
+							</div>
+
+							<div class=" score_item">
+								<img src="images/cashier.png" alt="cashier" id="cashier" >
+								<h3 class="score_label bad">-1</h3>
+							</div>
+						</div>
+					</div>
+
+					<noscript>
+						<p class="bg-warning">
+							This game needs JavaScript! It's currently disabled so please enable it in your browser's settings.
+						</p>
+					</noscript>			
+				</div>
 			</div>
-
-			<div id="game"><canvas id="canvas"  width="600" height="400"></canvas></div>
-
-			<noscript>
-				<p class="bg-warning">
-					This game needs JavaScript! It's currently disabled so please enable it in your browser's settings.
-				</p>
-			</noscript>			
-
-			<div class="scores">
-				<div class="score_item">
-					<img src="images/ualtnomore.png" alt="u/alt-no-more" id="altNoImage" >
-					<h3 class="score_label">You</h3>
-				</div>
-
-				<div class="score_item">
-					<img src="images/condom.png" alt="condom" id="condom" >
-					<h3 class="score_label good">+3</h3>
-				</div>
-
-				<div class="score_item">
-					<img src="images/deo.png" alt="deodorant" id="deodorant" >
-					<h3 class="score_label good">+1</h3>			
-				</div>
-
-				<div class="score_item">
-					<img src="images/old_lady.png" alt="old_lady" id="old_Lady" >
-					<h3 class="score_label bad">-2</h3>
-				</div>
-
-				<div class="score_item">
-					<img src="images/cashier.png" alt="cashier" id="cashier" >
-					<h3 class="score_label bad">-1</h3>
-				</div>
-			</div>
-			
-			<footer>
-				<p class="lead">Are you a nerd too? Then check out <a target="_blank" href="https://github.com/altnogame/altnogame.github.io">the GitHub repo</a>!</p>
-				<a class="btn btn-danger btn-lg donate-btn" href="https://paypal.me/AltNoGame" target="_blank" role="button">Donate on <img width="64" alt="PayPal" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/PayPal.svg/64px-PayPal.svg.png"></a>
-			</footer>
 		</div>
+
+		<footer>
+			<div class="row justify-content-center px-0 mx-0">
+				<div class="col-lg-4 col-12 footer">
+					<p class="lead">Are you a nerd too? Then check out <a target="_blank" href="https://github.com/altnogame/altnogame.github.io">the GitHub repo</a>!</p>
+					<a class="btn btn-danger btn-lg donate-btn" href="https://paypal.me/AltNoGame" target="_blank" role="button">Donate on <img width="64" alt="PayPal" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/PayPal.svg/64px-PayPal.svg.png"></a>
+				</div>
+			</div>
+		</footer>
 		<script src="Scripts/game.js"></script>
 	</body>
 </html>
