add desktop only message

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<div class=" col-12">
 					<div id="main">
 						<h1 >AltNoGame</h1>
+						<h2 style="color: red" class="d-none d-block d-md-none">Desktop Only</h2>
 						<p class="lead">Game based on <a href="https://www.reddit.com/r/teenagers/comments/a8vn3u/everyone_said_buying_condoms_was_no_big_deal_and/" target="_blank">the legendary thread</a> by <a href="https://www.reddit.com/user/alt-no-more" target="_blank">u/alt-no-more</a>. Use the arrow keys on your <span style="font-weight: 800; color: red;">keyboard</span> to play!</p>
 						<p class="lead">This game was made by <a href="https://www.reddit.com/user/RickDeveloper" target="_blank">u/RickDeveloper</a>. If you like it, please consider donating!</p>
 						<a class="btn btn-danger btn-lg donate-btn" href="https://paypal.me/AltNoGame" target="_blank" role="button">Donate on <img width="64" alt="PayPal" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/PayPal.svg/64px-PayPal.svg.png"></a>
